firebase sign-in and login

--- a/src/components/custom-button/CustomButton.scss
+++ b/src/components/custom-button/CustomButton.scss
@@ -1,7 +1,7 @@
 .custom-button {
-    // min-width: 5vw;
+    min-width: 5vw;
     // max-width: 10vw;
-    width: 5vw;
+    width: fit-content;
     height: 50px;
     letter-spacing: 0.5px;
     line-height: 50px;
@@ -14,7 +14,7 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
-  
+    
     &:hover {
       background-color: white;
       color: black;
