--- a/src/components/cart-dropdown/CartDropdown.scss
+++ b/src/components/cart-dropdown/CartDropdown.scss
@@ -1,7 +1,7 @@
 .cart-dropdown {
     position: absolute;
-    width: 240px;
-    height: 340px;
+    width: 20vw;
+    height: 30vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,9 @@
 
   
     .cart-items {
-      height: 240px;
+      height: 24vw;
+      width: 19vw;
+      margin : 10px 0px;
       display: flex;
       flex-direction: column;
       overflow: scroll;
