--- a/src/components/collection-item/CollectionItem.scss
+++ b/src/components/collection-item/CollectionItem.scss
@@ -5,6 +5,8 @@
     height: 50vh;
     align-items: center;
     box-shadow:  0px 8px 4px rgba(0,0,0,0.2);
+    position: relative;
+
     .image {
       width: 100%;
       height: 95%;
@@ -12,7 +14,25 @@
       background-position: center;
       margin-bottom: 5px;
     }
-  
+    
+    .custom-button{
+      width: 80%;
+      opacity: 0.7;
+      position: absolute;
+      top: 255px;
+      display: none;
+    }
+    &:hover{
+      .image{
+        opacity: 0.8;
+      }
+
+      .custom-button{
+        opacity: 0.85;
+        display: flex;
+      }
+    }
+
     .collection-footer {
       width: 100%;
       height: 5%;
