--- a/src/components/custom-button/CustomButton.scss
+++ b/src/components/custom-button/CustomButton.scss
@@ -1,11 +1,12 @@
 .custom-button {
-    min-width: 5vw;
+    min-width: 150px;
     // max-width: 10vw;
-    width: fit-content;
+    // width: fit-content;
+    width: 100%;
     height: 50px;
     letter-spacing: 0.5px;
     line-height: 50px;
-    padding: 0 35px 0 35px;
+    padding: 0px 35px 0px 35px;
     font-size: 15px;
     background-color: black;
     color: white;
@@ -14,11 +15,26 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
-    
+    display: flex;
+    justify-content: center;
+
+    // align-items: center;
     &:hover {
       background-color: white;
       color: black;
       border: 1px solid black;
+    }
+
+    &.inverted{
+      background-color: white;
+      color: black;
+      border: 1px solid black;
+
+      &:hover{
+        background-color: black;
+        color: white;
+        border:none;
+      }
     }
   }
   
