--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,7 +8,7 @@
     padding: 10px 0px;
     position: sticky;
     top: 0;
-
+    z-index: 10;
     .logo-container{
         // background-color: green;
         height: 100%;
