--- a/src/components/cart-dropdown/CartDropdown.scss
+++ b/src/components/cart-dropdown/CartDropdown.scss
@@ -20,11 +20,16 @@
       margin : 10px 0px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
+      overflow-y: scroll;
     }
   
     button {
       margin-top: auto;
+    }
+
+    .empty-message{
+      font-size: 1em;
+      margin: auto;
     }
   }
   
